spacing fix

--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -332,7 +332,7 @@ header {
         width: 100%;
         height: 100vh;
         transition: 0.2s ease-in-out;
-        padding: 50% 3em;
+        padding: 25% 3em;
         font-size: 1.25em;
         z-index: 5;
         transition: .5s ease-in-out;
